@@ -1,3 +1,8 @@
+*gitlab-runner-10.3.1 (17 Feb 2018)
+
+  17 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-runner-10.3.1.ebuild:
+  dev-vcs/gitlab-runner:  Add ebuild for version 10.3.1.
+
 *gitlab-runner-10.2.1 (16 Feb 2018)
 
   16 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-runner-10.2.1.ebuild:
